fixed wrong name in test for additional properties (#163)